# Garage360

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  SRS-Garage360-v3.md  SRS-Garage360-v4.md  bug.md  docker-compose.dev.yml  docker-compose.yml  docker-setup.skill  plan.md  project-manager.skill  schema-architect.skill  test-writer.skill
api/: .dockerignore  BACKEND-CONSTITUTION.md  Cargo.toml
api/schema/: control-db.sql  tenant_schema.sql
api/src/: config.rs  errors.rs  main.rs
api/src/background/: mod.rs
api/src/common/: pagination.rs
api/src/db/: control.rs  mod.rs  redis.rs  tenant.rs
api/src/middleware/: auth.rs  feature_flags.rs  mod.rs  rbac.rs  tenant.rs
api/src/modules/: mod.rs
api/src/modules/assets/: mod.rs  repo.rs  routes.rs  service.rs  types.rs
api/src/modules/auth/: mod.rs  repo.rs  routes.rs  routes.rs.bak  service.rs  types.rs
api/src/modules/bays/: repo.rs  routes.rs  service.rs  types.rs
api/src/modules/billing/: repo.rs  routes.rs  service.rs  types.rs
api/src/modules/control/: feature_flags.rs  mod.rs  tenants.rs
api/src/modules/customers/: repo.rs  routes.rs  service.rs  types.rs
api/src/modules/dashboard/: routes.rs  service.rs
api/src/modules/dvi/: repo.rs  routes.rs  service.rs  types.rs
api/src/modules/hr/: mod.rs  repo.rs  routes.rs  service.rs  types.rs
api/src/modules/inventory/: repo.rs  routes.rs  service.rs  types.rs
api/src/modules/jobs/: repo.rs  routes.rs  service.rs  types.rs
api/src/modules/purchases/: repo.rs  routes.rs  service.rs  types.rs
api/src/notifications/: mod.rs
api/src/pdf/: mod.rs
api/src/search/: mod.rs
api/src/storage/: mod.rs
api/tests/: payment_inventory_integration.rs
(+141 files in other folders)
