[package]
name = "garage360-api"
version = "0.1.0"
edition = "2021"
authors = ["Garage360 Team"]
description = "Multi-tenant workshop management SaaS API"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header", "cookie"] }
rand = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
hyper = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "rust_decimal"] }
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
decimal = { version = "2", features = ["serde"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
jsonwebtoken = "9"
argon2 = "0.5"
validator = { version = "0.18", features = ["derive"] }
dotenvy = "0.15"
config = "0.14"
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
object_store = "0.10"
utoipa = "3"
lru = "0.12"
aws-config = "1"
aws-credential-types = "1"
aws-smithy-http = "0.60"
aws-smithy-types = "1"
reqwest = { version = "0.12", features = ["json"] }
lettre = { version = "0.11", features = ["tokio1-native-tls", "smtp-transport"] }
calamine = "0.25"
rust_xlsxwriter = "0.44"
printpdf = "0.7"
image = "0.25"
zip = "2"
tokio-cron-scheduler = "0.10"

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.4", features = ["util"] }
hyper = "1"
axum-test = "15"
